--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -2,47 +2,48 @@
 %html
 
   %body
-    #notification
-      #notice メッセージ送信完了
+    .notification
+      .notice チャットグループが作成されました。
 
-    #chat-side
-      #chat-side__user
-        #chat-side__user-content
-          #chat-side__user--name miteo
-        #chat-side__user--new-group
-        #chat-side__edit-user
+    .chat-side
+      .chat-side__user
+        .chat-side__user-content
+          .chat-side__user--name miteo
+        .chat-side__user--new-group
+        .chat-side__edit-user
 
-      #chat-side__groups
-        #chat-side__group-list
-          #chat-side__group
-            #chat-side__group-name　グループネーム１
-            #chat-side__group-message 新着メッセージ１ あなたは事実まあこの仕事人という訳のためがしますな。
-          #chat-side__group
-            #chat-side__group-name　グループネーム２
-            #chat-side__group-message 新着メッセージ２ あなたは事実まあこの仕事人という訳のためがしますな。
+      .chat-side__groups
+        .chat-side__group-list
+          .chat-side__group
+            .chat-side__group-name グループネーム１
+            .chat-side__group-message 新着メッセージ１ あなたは事実まあこの仕事人という訳のためがしますな。
+          .chat-side__group
+            .chat-side__group-name グループネーム２
+            .chat-side__group-message 新着メッセージ２ あなたは事実まあこの仕事人という訳のためがしますな。
 
-    #chat-main
-      #chat-main__header
-        #chat-main__header--group
-          #chat-main__header--group-name　グループネーム１
-          #chat-main__header--group-edit-btn
-        #chat-main__header-members　MEMBER: miteo
+    .chat-main
+      .chat-main__header
+        .chat-main__header--group
+          .chat-main__header--group-name グループネーム１
+          .chat-main__header--group-edit-btn edit
+          .chat-main__header-members MEMBER: miteo
 
-      #chat-main__body
-        #chat-main__body--massage-list
-          #chat-main__massage
-            #chat-main__massage-user-name　miteo
-            #chat-main__massage-user-time　2018/07/15 14:17:20
-            #chat-main__massage-body　あなたは事実まあこの仕事人という訳のためがしますな。無論大体で安住順はどうしてもいわゆるまごまごたんだけに廻らとなりだのは尊敬あったですて、少しにも退けなましますだ。
-              #chat-main__massage-body-image
-          #chat-main__massage
-            #chat-main__massage-user-name　miteo
-            #chat-main__massage-user-time　2018/07/15 14:17:22
-            #chat-main__massage-body　あなたは事実まあこの仕事人という訳のためがしますな。無論大体で安住順はどうしてもいわゆるまごまごたんだけに廻らとなりだのは尊敬あったですて、少しにも退けなましますだ。
-              #chat-main__massage-body-image
+      .chat-main__body
+        .chat-main__body--massage-list
+          .chat-main__massage
+            .chat-main__massage-user-name miteo
+            .chat-main__massage-user-time 2018/07/15 14:17:20
+            .chat-main__massage-body あなたは事実まあこの仕事人という訳のためがしますな。無論大体で安住順はどうしてもいわゆるまごまごたんだけに廻らとなりだのは尊敬あったですて、少しにも退けなましますだ。
+            .chat-main__massage-body-image
+          .chat-main__massage
+            .chat-main__massage-user-name miteo
+            .chat-main__massage-user-time 2018/07/15 14:17:22
+            .chat-main__massage-body あなたは事実まあこの仕事人という訳のためがしますな。無論大体で安住順はどうしてもいわゆるまごまごたんだけに廻らとなりだのは尊敬あったですて、少しにも退けなましますだ。
+            .chat-main__massage-body-image
 
-      #chat-main__footer
-        #chat-main__footer-body
-          %input#massage
-          %label#chat-file
-          #input#submit
+      .chat-main__footer
+        %form{:class => "chat-main__footer-form", :id => "new_message", :accept-charset => "UTF-8", :method => "post"}
+          .chat-main__footer-body
+            %input{:placeholder => "type a message", :class => "message", :type => "text",:id => "message_body"}
+            %label.chat-file
+            %input{:type => "submit", :value => "send"}
