--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,7 +32,7 @@ body {
 .chat-side__user{
   background-color: #253141;
   color: white;
-  height: 120px;
+  height: 15%;
   display: flex;
   align-items: center;
   padding-left: 20px;
@@ -43,14 +43,13 @@ body {
 
 
 
-
 .chat-side__groups{
   background-color: #2f3e51;
   color: white;
-  height: 100%;
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 20px;
+  height: calc(100vh - 14% - 30px);
 }
 
 .chat-side__group{
@@ -70,8 +69,9 @@ body {
 
 
 .chat-main{
+  height: 100vh;
   width: calc(100% - 300px);
-  background-color: #FFFAAA;
+  background-color: #FFFFFF;
   float: left;
   position: relative;
   min-height: 100%;
@@ -79,6 +79,7 @@ body {
 
 .chat-main__header{
   border:1px solid #eee;
+  height: calc(15% - 2px);
 }
 
 .chat-main__header--group-name{
@@ -91,7 +92,7 @@ body {
 
 .chat-main__header--group-edit-btn{
   float: right;
-  margin: 28px 20px 0;
+  margin: 28px 40px 0;
   padding: 12.5px 20px;
   border: 1px solid #38AEF0;
   color: #38AEF0;
@@ -107,65 +108,73 @@ body {
 }
 
 
+.chat-main__body{
+  height: calc( 100vh - 15% - 90px );
+}
+
 .chat-main__body--massage-list{
   padding-top: 46px;
 }
 
 .chat-main__massage{
   padding-left: 40px;
+  padding-right: 40px;
   padding-bottom: 40px;
+}
+
+.chat-main__massage-user-name{
+  float: left;
+}
+
+.chat-main__massage-user-time{
+  float: left;
+  font-size: 12px;
+  padding-top: 2px;
+  padding-left: 10px;
+  color: #999;
+
 }
 
 .chat-main__footer{
   position: absolute;
   bottom: 0;
-  width: 100%;
-  height: 50px;
+  width: calc(100vw - 300px);
+  height: 90px;
+  background-color: #B8C3C7;
 }
 
-/*
-  %body
-    #notification
-      #notice チャットグループが作成されました。
+.chat-main__footer-form {
+  margin: 0 40px;
+  position: relative;
+}
 
-    #chat-side
-      #chat-side__user
-        #chat-side__user-content
-          #chat-side__user--name miteo
-        #chat-side__user--new-group
-        #chat-side__edit-user
+.chat-main__massage-body{
+  clear: both;
+  padding-top: 10px;
+}
 
-      #chat-side__groups
-        #chat-side__group-list
-          #chat-side__group
-            #chat-side__group-name グループネーム１
-            #chat-side__group-message 新着メッセージ１
-          #chat-side__group
-            #chat-side__group-name グループネーム１
-            #chat-side__group-message 新着メッセージ１
+.input_message{
+  height: 50px;
+  width: calc( 100% - 130px );
+  margin: 20px 0;
+  padding-left: 20px;
+  border-width: 0px;
+}
 
-    #chat-main
-      #chat-main__header
-        #chat-main__header--group
-          #chat-main__header--group-name グループネーム１
-          #chat-main__header--group-edit-btn
-        #chat-main__header-members MEMBER: miteo
+.chat-main__footer .submit {
+  color: #fff;
+  width: 100px;
+  height: 50px;
+  text-align: center;
+  background-color: #38AEF0;
+  margin: 20px 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: none;
+}
 
-      #chat-main__body
-        #chat-main__body--massage-list
-          #chat-main__massage
-            #chat-main__massage-user-name miteo
-            #chat-main__massage-user-time 2018/07/15 14:17:20
-            #chat-main__massage-body あなたは事実まあこの仕事人という訳のためがしますな。無論大体で安住順はどうしてもいわゆるまごまごたんだけに廻らとなりだのは尊敬あったですて、少しにも退けなましますだ。
-              #chat-main__massage-body-image
-          #chat-main__massage
-            #chat-main__massage-user-name miteo
-            #chat-main__massage-user-time 2018/07/15 14:17:22
-            #chat-main__massage-body あなたは事実まあこの仕事人という訳のためがしますな。無論大体で安住順はどうしてもいわゆるまごまごたんだけに廻らとなりだのは尊敬あったですて、少しにも退けなましますだ。
-              #chat-main__massage-body-image
 
-      #chat-main__footer
-        #chat-main__footer-body
-          %input#massage
-          %label#chat-file
-          #input#submit */
+
+
+
