マークアップ完了

--- a/app/assets/stylesheets/_chat-side.scss
+++ b/app/assets/stylesheets/_chat-side.scss
@@ -6,7 +6,7 @@
 
 .chat-side__user{
   background-color: #253141;
-  color: white;
+  color: $WhiteColor;
   height: 15%;
   display: flex;
   align-items: center;
