--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -1,2 +1,4 @@
-$mainWhiteColor: #FFFFFF;
-$skyBlue: #434A54;
+$WhiteColor: #FFFFFF;
+$BlueColor: #38AEF0;
+$GrayColor: #999999;
+$FormGrayColor: #B8C3C7;
