--- a/app/assets/stylesheets/_chat-main.scss
+++ b/app/assets/stylesheets/_chat-main.scss
@@ -1,22 +1,30 @@
+html {
+    height: 100%;
+}
+
+body {
+    height: 100%;
+    margin: 0;
+}
+
 .chat-main{
   height: 100vh;
   width: calc(100% - 300px);
-  background-color: #FFFFFF;
+  background-color: $WhiteColor;
   float: left;
   position: relative;
   min-height: 100%;
-}
 
-.chat-main__header{
-  border:1px solid #eee;
-  height: calc(15% - 2px);
+  .chat-main__header{
+    border:1px solid #eee;
+    height: calc(15% - 2px);
+  }
 }
 
 .chat-main__header--group-name{
   padding-top: 35px;
   padding-left: 40px;
   font-size: 20px;
-  color: #333333;
   float: left;
 }
 
@@ -24,8 +32,8 @@
   float: right;
   margin: 28px 40px 0;
   padding: 12.5px 20px;
-  border: 1px solid #38AEF0;
-  color: #38AEF0;
+  border: 1px solid $BlueColor;
+  color: $BlueColor;
 }
 
 .chat-main__header-members{
@@ -33,10 +41,9 @@
   padding-top: 15px;
   padding-left: 40px;
   font-size: 12px;
-  color: #999999;
+  color: $GrayColor;
   padding-bottom: 20px;
 }
-
 
 .chat-main__body{
   height: calc( 100vh - 15% - 90px );
@@ -61,7 +68,7 @@
   font-size: 12px;
   padding-top: 2px;
   padding-left: 10px;
-  color: #999999;
+  color: $GrayColor;
 
 }
 
@@ -70,7 +77,7 @@
   bottom: 0;
   width: calc(100vw - 300px);
   height: 90px;
-  background-color: #B8C3C7;
+  background-color: $FormGrayColor;
 }
 
 .chat-main__footer-form {
@@ -98,13 +105,12 @@
   right: 0;
 }
 
-
 .chat-main__footer .submit {
-  color: #fff;
+  color: $WhiteColor;
   width: 100px;
   height: 50px;
   text-align: center;
-  background-color: #38AEF0;
+  background-color: $BlueColor;
   margin: 20px 0;
   position: absolute;
   top: 0;
