--- a/app/assets/stylesheets/_chat-side.scss
+++ b/app/assets/stylesheets/_chat-side.scss
@@ -1,44 +1,42 @@
-.chat-side{
+.chat-side {
   width: 300px;
   float: left;
   height: 100%;
+
+  &__user {
+    background-color: #253141;
+    color: $WhiteColor;
+    height: 15%;
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 16px;
+    font-weight: bold;
+  }
 }
 
-.chat-side__user{
-  background-color: #253141;
-  color: $WhiteColor;
-  height: 15%;
-  display: flex;
-  align-items: center;
-  padding-left: 20px;
-  padding-right: 20px;
-  font-size: 16px;
-  font-weight: bold;
-}
-
-.chat-side__user--new-group{
+.chat-side__user--new-group {
   float: left;
   margin-left: 170px;
 }
 
-.chat-side__groups{
+.chat-side__groups {
   background-color: #2f3e51;
   color: white;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 20px;
+  padding: 20px 20px 0;
   height: calc(100vh - 14% - 30px);
 }
 
-.chat-side__group{
+.chat-side__group {
   padding-bottom: 40px;
-}
 
-.chat-side__group-name{
-  font-size: 15px;
-}
+  &-name {
+    font-size: 15px;
+  }
 
-.chat-side__group-message{
-  padding-top: 5px;
-  font-size: 11px;
+  &-message {
+    padding-top: 5px;
+    font-size: 11px;
+  }
 }
