--- a/app/assets/stylesheets/_chat-main.scss
+++ b/app/assets/stylesheets/_chat-main.scss
@@ -20,8 +20,7 @@ body {
     height: calc(15% - 2px);
 
     &--group-name {
-      padding-top: 35px;
-      padding-left: 40px;
+      padding: 35px 0px 0px 40px;
       font-size: 20px;
       float: left;
     }
@@ -38,8 +37,7 @@ body {
 
 .chat-main__header-members {
   clear: left;
-  padding-top: 15px;
-  padding-left: 40px;
+  padding: 15px 0px 0px 40px;
   font-size: 12px;
   color: $GrayColor;
   padding-bottom: 20px;
@@ -54,9 +52,7 @@ body {
 }
 
 .chat-main__massage {
-  padding-left: 40px;
-  padding-right: 40px;
-  padding-bottom: 40px;
+  padding: 0px 40px 40px;
 
   &-user-name {
     float: left;
@@ -65,8 +61,7 @@ body {
   &-user-time {
     float: left;
     font-size: 12px;
-    padding-top: 2px;
-    padding-left: 10px;
+    padding: 2px 0px 0px 10px;
     color: $GrayColor;
   }
 }
