--- a/app/assets/stylesheets/_chat-side.scss
+++ b/app/assets/stylesheets/_chat-side.scss
@@ -9,8 +9,7 @@
     height: 15%;
     display: flex;
     align-items: center;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 0px 20px;
     font-size: 16px;
     font-weight: bold;
   }
