--- a/app/assets/stylesheets/_chat-side.scss
+++ b/app/assets/stylesheets/_chat-side.scss
@@ -12,30 +12,30 @@
     padding: 0px 20px;
     font-size: 16px;
     font-weight: bold;
+
+    &--new-group {
+    float: left;
+    margin-left: 170px;
   }
 }
 
-.chat-side__user--new-group {
-  float: left;
-  margin-left: 170px;
-}
-
-.chat-side__groups {
-  background-color: #2f3e51;
-  color: white;
-  padding: 20px 20px 0;
-  height: calc(100vh - 14% - 30px);
-}
-
-.chat-side__group {
-  padding-bottom: 40px;
-
-  &-name {
-    font-size: 15px;
+  &__groups {
+    background-color: #2f3e51;
+    color: white;
+    padding: 20px 20px 0;
+    height: calc(100vh - 14% - 30px);
   }
 
-  &-message {
-    padding-top: 5px;
-    font-size: 11px;
+  &__group {
+    padding-bottom: 40px;
+    &-name {
+      font-size: 15px;
+    }
+
+    &-message {
+      padding-top: 5px;
+      font-size: 11px;
+    }
   }
 }
+
