ユーザー情報編集機能

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,25 +1,18 @@
 .notification
-  .notice チャットグループが作成されました。
+  .notice
+    チャットグループが作成されました。
 
-.chat-side
-  .chat-side__user
-    .chat-side__user-content
-      .chat-side__user--name miteo
-    .chat-side__user--new-group
-      = fa_icon "pencil-square-o"
-      = fa_icon "cog"
-    .chat-side__edit-user
-
-  .chat-side__groups
-    .chat-side__group-list
-    = render "group"
+= render "devise/shared/side_bar"
 
 .chat-main
   .chat-main__header
     .chat-main__header--group
-      .chat-main__header--group-name グループネーム１
-      .chat-main__header--group-edit-btn edit
-      .chat-main__header-members MEMBER: miteo
+      .chat-main__header--group-name
+        グループネーム１
+      .chat-main__header--group-edit-btn
+        edit
+      .chat-main__header-members
+        MEMBER: miteo
 
   .chat-main__body
     .chat-main__body--massage-list
