フラッシュメッセージ対応

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,5 +3,5 @@
 @import "./colors";
 @import "./chat-side";
 @import "./chat-main";
-@import "./notification";
 @import "./user";
+@import "modules/flash";
