--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -2,3 +2,12 @@ $WhiteColor: #FFFFFF;
 $BlueColor: #38AEF0;
 $GrayColor: #999999;
 $FormGrayColor: #B8C3C7;
+
+// フラッシュメッセージカラー
+$white: #fff;
+$side_blue_dark: #253141;
+$side_blue_light: #2f3e51;
+$light_blue: #38AEF0;
+$light_gray: #999;
+$black: #434a54;
+$alert_orange: #F35500;
